--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="image">
     <img src="images/Anthony.jpeg" width="200" height="200" alt="Image of Antonyo>">
+    <h1>Antonyo Michael</h1>
     <ul>
         <li>Anthony Fav 1</li>
         <li>Anthony fav 2</li>
