--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
        
     </ul>
     </div>
-    <img src="images/logo.png" alt="logo">
+    <a
+    href="http://validator.w3.org/check/referer"> <img
+    src="images/logo.png"
+    alt="html validator"/></a>
+    
 
 </body>
 </html>
